eks/routes.tf
# private route table

resource "aws_route_table" "private" {
    vpc_id = aws_vpc.main.id

    route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.nat.id 
        # if the application wants to send a request and the destination IP address is not within your vpc range 
        # It will be routed outside of your vpc using the NAT nat_gateway
    }
    
     tags = {
            Name = "${local.env}-private"
        }
}

# public route table

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id

    route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = aws_internet_gateway.igw.id 
    }
    
    tags = {
            Name = "${local.env}-public"
        }
}

# associate route tables with subnets

resource "aws_route_table_association" "private_zone1" {
    subnet_id = aws_subnet.private_zone1.id
    route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private_zone2" {
    subnet_id = aws_subnet.private_zone2.id
    route_table_id = aws_route_table.private.id
}

# assign public route tables

resource "aws_route_table_association" "public_zone1" {
    subnet_id = aws_subnet.public_zone1.id
    route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_zone2" {
    subnet_id = aws_subnet.public_zone1.id
    route_table_id = aws_route_table.public.id
}
